--- a/README
+++ b/README
@@ -5,7 +5,8 @@ all patent-encumbered algorithms removed, all known security bugs
 fixed, new features reintroduced and many other clean-ups. More
 information about SSH itself can be found in the file README.Ylonen.
 OpenSSH has been created by Aaron Cambell, Bob Beck, Markus Friedl,
-Niels Provos, Theo de Raadt, and Dug Song.
+Niels Provos, Theo de Raadt, and Dug Song. It has a homepage at
+http://www.openssh.com/
 
 This port consists of the re-introduction of autoconf support, PAM
 support (for Linux and Solaris), EGD[1] support, and replacements for
@@ -47,7 +48,8 @@ Internet Business Solutions
 
 Credits - 
 
-The OpenBSD team
+Aaron Cambell, Bob Beck, Markus Friedl, Niels Provos, 
+Theo de Raadt, and Dug Song - Creators of OpenSSH
 'jonchen' - the original author of PAM support of SSH
 Dan Brosemer <odin@linuxfreak.com> - Autoconf and build fixes & Debian scripts
 Nalin Dahyabhai <nalin.dahyabhai@pobox.com> - PAM environment patch
