--- a/README
+++ b/README
@@ -4,7 +4,7 @@ OpenSSH is based on the last free version of Tatu Ylonen's SSH with
 all patent-encumbered algorithms removed, all known security bugs
 fixed, new features reintroduced and many other clean-ups. More
 information about SSH itself can be found in the file README.Ylonen.
-OpenSSH has been created by Aaron Cambell, Bob Beck, Markus Friedl,
+OpenSSH has been created by Aaron Campbell, Bob Beck, Markus Friedl,
 Niels Provos, Theo de Raadt, and Dug Song. It has a homepage at
 http://www.openssh.com/
 
@@ -48,7 +48,7 @@ Internet Business Solutions
 
 Credits - 
 
-Aaron Cambell, Bob Beck, Markus Friedl, Niels Provos, 
+Aaron Campbell, Bob Beck, Markus Friedl, Niels Provos, 
 Theo de Raadt, and Dug Song - Creators of OpenSSH
 'jonchen' - the original author of PAM support of SSH
 Dan Brosemer <odin@linuxfreak.com> - Autoconf and build fixes & Debian scripts
