--- a/ssh.1
+++ b/ssh.1
@@ -963,7 +963,7 @@ The libraries described in
 .Xr ssl 8
 are required for proper operation.
 .Pp
-OpenSSH has been created by Aaron Cambell, Bob Beck, Markus Friedl,
+OpenSSH has been created by Aaron Campbell, Bob Beck, Markus Friedl,
 Niels Provos, Theo de Raadt, and Dug Song.
 .Sh SEE ALSO
 .Xr rlogin 1 ,
