--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
  - EGD uses a socket, not a named pipe. Duh.
  - Fix includes in fingerprint.c
  - Fix scp progress bar bug again.
+ - Move scp from ${libdir}/ssh to ${libexecdir}/ssh at request of 
+   David Rankin <drankin@bohemians.lexington.ky.us>
 
 19991118
  - Merged OpenBSD CVS changes
