--- a/README
+++ b/README
@@ -60,6 +60,7 @@ Nalin Dahyabhai <nalin.dahyabhai@pobox.com> - PAM environment patch
 Niels Kristian Bech Jensen <nkbj@image.dk> - Assorted patches
 Phil Hands <phil@hands.com> - Debian scripts, assorted patches
 Thomas Neumann <tom@smart.ruhr.de> - Shadow passwords
+Tudor Bosman <tudorb@jm.nu> - MD5 password support
 
 Miscellania - 
 
