--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+19991121
+  - OpenBSD CVS Changes
+    - [channels.c]
+      make this compile, bad markus
+    - [log.c readconf.c servconf.c ssh.h]
+      bugfix: loglevels are per host in clientconfig,
+      factor out common log-level parsing code.
+    - [servconf.c]
+      remove unused index (-Wall)
+    - [ssh-agent.c]
+      only one 'extern char *__progname'
+    - [sshd.8]
+      document SIGHUP, -Q to synopsis
+    - [sshconnect.c serverloop.c sshd.c packet.c packet.h]
+      [channels.c clientloop.c]
+      SSH_CMSG_MAX_PACKET_SIZE, some clients use this, some need this, niels@
+      [hope this time my ISP stays alive during commit]
+
 19991120
  - Merged more Solaris support from Marc G. Fournier 
    <marc.fournier@acadiau.ca>
