--- a/sshd.8
+++ b/sshd.8
@@ -19,7 +19,7 @@
 .Nd secure shell daemon
 .Sh SYNOPSIS
 .Nm sshd
-.Op Fl diq
+.Op Fl diqQ
 .Op Fl b Ar bits
 .Op Fl f Ar config_file
 .Op Fl g Ar login_grace_time
@@ -105,6 +105,10 @@ the client, and both sides exit.
 can be configured using command-line options or a configuration
 file.  Command-line options override values specified in the
 configuration file.
+.Pp
+.Nm
+rereads its configuration file when it receives a hangup signal,
+.Dv SIGHUP .
 .Pp
 The options are as follows:
 .Bl -tag -width Ds
