--- a/ssh.1
+++ b/ssh.1
@@ -662,6 +662,16 @@ or
 RSA authentication will only be
 attempted if the identity file exists, or an authentication agent is
 running.
+.It Cm SkeyAuthentication
+Specifies whether to use
+.Xr skey 1
+authentication.  The argument to
+this keyword must be
+.Dq yes
+or
+.Dq no .
+The default is
+.Dq no .
 .It Cm CheckHostIP
 If this flag is set to
 .Dq yes ,
