- More reformatting merged from OpenBSD CVS  - Merged OpenBSD CVS changes:    - [channels.c]      report from mrwizard@psu.edu via djm@ibs.com.au    - [channels.c]      set SO_REUSEADDR and SO_LINGER for forwarded ports.      chip@valinux.com via damien@ibs.com.au    - [nchan.c]      it's not an error() if shutdown_write failes in nchan.    - [readconf.c]      remove dead #ifdef-0-code    - [readconf.c servconf.c]      strcasecmp instead of tolower    - [scp.c]      progress meter overflow fix from damien@ibs.com.au    - [ssh-add.1 ssh-add.c]      SSH_ASKPASS support    - [ssh.1 ssh.c]      postpone fork_after_authentication until command execution,      request/patch from jahakala@cc.jyu.fi via damien@ibs.com.au      plus: use daemon() for backgrounding

--- a/ssh-add.1
+++ b/ssh-add.1
@@ -71,8 +71,11 @@ terminal if it was run from a terminal.  If
 .Nm
 does not have a terminal associated with it but
 .Ev DISPLAY
-is set, it
-will open an X11 window to read the passphrase.  This is particularly
+and
+.Ev SSH_ASKPASS
+are set, it will execute the program specified by
+.Ev SSH_ASKPASS
+and open an X11 window to read the passphrase.  This is particularly
 useful when calling
 .Nm
 from a
