--- a/ssh.1
+++ b/ssh.1
@@ -293,7 +293,7 @@ disables any escapes and makes the session fully transparent.
 .It Fl f
 Requests
 .Nm
-to go to background after authentication.  This is useful
+to go to background just before command execution.  This is useful
 if
 .Nm
 is going to ask for passwords or passphrases, but the user
