--- a/ssh.1
+++ b/ssh.1
@@ -627,6 +627,9 @@ server running on some machine, or execute
 somewhere.  Host key management will be done using the
 HostName of the host being connected (defaulting to the name typed by
 the user).
+Note that
+.Cm CheckHostIP
+is not available for connects with a proxy command.
 .Pp
 .It Cm RemoteForward
 Specifies that a TCP/IP port on the remote machine be forwarded over
