--- a/ssh-add.1
+++ b/ssh-add.1
@@ -51,7 +51,7 @@ Deletes all identities from the agent.
 .El
 .Sh FILES
 .Bl -tag -width Ds
-.Pa $HOME/.ssh/identity
+.It Pa $HOME/.ssh/identity
 Contains the RSA authentication identity of the user.  This file
 should not be readable by anyone but the user.
 Note that
@@ -64,6 +64,9 @@ default file added by
 .Nm
 when no other files have been specified.
 .Pp
+.Sh ENVIRONMENT
+.Bl -tag -width Ds
+.It Ev "DISPLAY" and "SSH_ASKPASS"
 If
 .Nm
 needs a passphrase, it will read the passphrase from the current
