--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+19991207
+ - sshd Redhat init script patch from Jim Knoble <jmknoble@pobox.com>
+   fixes compatability with 4.x and 5.x
+
 19991204
  - Small cleanup of PAM code in sshd.c
  - Merged OpenBSD CVS changes:
